[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/spr_caja_txt_2.png" type="Texture" id=1]
[ext_resource path="res://Objects/textboxEngine.gd" type="Script" id=2]
[ext_resource path="res://SFX Files/textOlimac.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/textboxNEW.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Resource files/TextBox-Inverted-Olimac.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Fonts/uni05_53.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/CyborgSister.tres" type="DynamicFont" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="textBox" type="Node2D"]
position = Vector2( 208, 32 )
script = ExtResource( 2 )
message = [ "Hola, este es un texto de ejemplo" ]
message_end = 1
textName = "Sample Name"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 224, 32 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="message_draw" type="RichTextLabel" parent="."]
margin_left = -80.0
margin_top = 5.0
margin_right = 592.0
margin_bottom = 85.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "Texto de ejemplo"
text = "Texto de ejemplo"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textName" type="Label" parent="."]
margin_left = -164.0
margin_top = -21.0
margin_right = -28.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 2 )
text = "Text"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="talkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="textFace" type="AnimatedSprite" parent="."]
position = Vector2( -128, 44 )
scale = Vector2( 2, 2 )
frames = ExtResource( 5 )
playing = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 240, 416 )
collision_layer = 33
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
